--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -26,7 +26,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/xlbgxlbg/JD_SCRIPTS.git"
+          source_repo: "https://github.com/zero205/JD_tencent_scf.git"
           source_branch: "main"
           destination_branch: "master"
           github_token: ${{ secrets.PAT }}
